<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_wallpaper"
    tools:context=".VerificationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/email_few_moments_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="@string/email_few_moments"
            android:gravity="center"
            android:textColor="@color/colorGrey"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center_horizontal"
                android:text="@string/verification_code_1"
                android:textColor="@color/colorMediumGrey"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center_horizontal"
                android:text="@string/verification_code_2"
                android:textColor="@color/colorMediumGrey"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center_horizontal"
                android:text="@string/verification_code_3"
                android:textColor="@color/colorMediumGrey"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/verification_code_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/colorGrey"
                android:cursorVisible="false"
                android:gravity="center_horizontal"
                android:hint="@string/verification_prompt"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorMediumGrey"
                android:textSize="32sp" />

            <Button
                android:id="@+id/verify_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/gradient_b"
                android:text="@string/verify_button"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/verification_progress_bar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:visibility="gone" />

        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>